--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,9 @@
 @include meta.load-css('tokens/themes/light');
 @include meta.load-css('tokens/themes/dark');
 
+/* Global base styles */
+@include meta.load-css('base/global');
+
 /* Common (Styles common for multiple pages or components) */
 @include meta.load-css('layout/common');
 
