--- a/src/scss/utilities/_index.scss
+++ b/src/scss/utilities/_index.scss
@@ -1,7 +1,7 @@
 @use 'sass:meta';
 
 @layer utilities {
-  @include meta.load-css('./breakpoint');
+  @include meta.load-css('./visibility');
   @include meta.load-css('./layout');
   @include meta.load-css('./position');
   @include meta.load-css('./flex-layout');
